Reset pswd page, checks equality among pswd

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -18,6 +18,12 @@
   color: white;
 }
 
+.error-message {
+  color: red; 
+  font-size: 12px;
+  margin-top: 5px;
+}
+
 .signin
 {
   position: absolute;
