--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,21 +1,16 @@
+:root {
+  --glass: rgba(255, 255, 255, 0.6);
+  --boxShadow: 0px 19px 60px rgb(0 0 0 / 8%);
+}
+
 * {
   margin: 0;
   padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .App {
   text-align: center;
-}
-
-.my-container {
-  background: linear-gradient(90deg, #C7C5F4, #776BCC);
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .error-message {
@@ -24,82 +19,91 @@
   margin-top: 5px;
 }
 
-.signin
-{
-  position: absolute;
-  width: 400px;
-  background: #d1c4e9;  
-  z-index: 1000;
+.login-container {
+  padding-left: 37%;
+  padding-right: 35%;
+  padding-top: 7%;
+}
+
+.signin {
+  background-color: var(--glass); 
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 40px;
-  border-radius: 4px;
-  box-shadow: 0 15px 35px rgba(0,0,0,9);
+  border-radius: 7px;
+}
+
+.reset-password-container {
+  padding-left: 37%;
+  padding-right: 35%;
+  padding-top: 3%;
+}
+
+.reset-password {
+  background-color: var(--glass); 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+  border-radius: 7px;
+}
+
+.logo {
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  font-family: cursive, fantasy;
+}
+
+.menu {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.menu-item {
+  margin-bottom: 10px;
+  text-align: center;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.menu-item span {
+  text-decoration: none;
+  color: #333;
+}
+
+.menu-item span:hover {
+  cursor: pointer;
+  color: #2600ff;
+}
+
+#loader {
+  padding: 2%;
+  background-color: #2600ff;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#sidebar {
+  padding: 20px;
+  width: 260px;
+  background-color: var(--glass); 
+  height: 100vh;
 }
 
 @media (min-width: 300px) and (max-width: 1024px) {
-  .my-container{
-    background: linear-gradient(90deg, #C7C5F4, #050319);
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
+  .login-container {
+    height: 100vh;
+    padding-left: 3%;
+    padding-right: 3%;
+    padding-top: 30%;
   }
-}
-
-
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background: linear-gradient(90deg, #C7C5F4, #776BCC);
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
 
 
